 CHANGE LOG

 Date: 
 Author: effakcuL 
 Changes:2019/01/08
 - Changed source for integral computation from highpass filter output to squared derivative. 

 Date:   2019/04/16
 Author: Rafael de Moura Moreira
 Changes:
 - Added output buffer to correctly output a peak found by backsearching using the 2nd thresholds.

 Date:   2019/04/15
 Author: Rafael de Moura Moreira
 Changes:
 - Removed delay added by the filters.
 - Another fix relating to the last QRS, preventing multiple detections of the same peak.

 Date:   2019/04/11
 Author: Rafael de Moura Moreira
 Changes:
 - Fixed moving-window integral.
 - Fixed how to find the correct sample with the last QRS.
 - Replaced constant value in code by its #define.
 - Added some casting on comparisons to get rid of compiler warnings.